# permissions_system

./: README.md  pyproject.toml  requirements.txt  setup.py
.eggs/wheel-0.35.1-py3.8.egg/EGG-INFO/: RECORD
develop/: .env  alembic.ini  application.py  main.py  manage.py
develop/alembic/: env.py
develop/alembic/versions/: 73184b64cbe3_init.py
develop/api/api_v1/: api.py
develop/api/api_v1/endpoints/: user.py
develop/core/: config.py  jwt.py
develop/crud/: token.py  user.py
develop/models/: Post.py  Token.py  User.py
develop/schemas/: token.py  user.py
develop/utils/: app_event_funcs.py  dependencies.py  security.py
permissions_system/: PermissionsSystem.py  PermissionsSystemDatabases.py  constants.py  models.py
permissions_system/databases/: PermissionsSystem.py
